<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/top_headline_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:shapeAppearanceOverlay="@style/SmoothBottomImage"
                    android:foreground="@drawable/ripple_container"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardPreventCornerOverlap="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/top_headline_image"
                            android:layout_width="match_parent"
                            android:layout_height="312dp"
                            android:src="@drawable/sample"
                            android:foreground="@drawable/text_overlay"
                            app:shapeAppearanceOverlay="@style/SmoothBottomImage"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:id="@+id/tv_top_headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/top_headline_learn_more"
                            android:text="@string/desc_news_sample"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:layout_marginBottom="12dp"
                            android:layout_marginHorizontal="24dp"/>

                        <TextView
                            android:id="@+id/top_headline_learn_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/top_headline_image"
                            android:text="@string/action_learn_more"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:layout_marginBottom="24dp"
                            android:layout_marginStart="24dp" />

                        <TextView
                            android:id="@+id/top_headline_learn_more_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/top_headline_learn_more"
                            android:layout_alignBottom="@id/top_headline_image"
                            android:layout_alignBaseline="@id/top_headline_learn_more"
                            android:text="@string/action_learn_more_arrow"
                            android:textColor="@color/white"
                            android:textSize="36sp"/>

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/top_headline_card"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/title_breaking_news"
                    style="@style/TextTitle"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>