<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="36dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/top_headline_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:foreground="@drawable/ripple_container"
            app:cardPreventCornerOverlap="false"
            app:shapeAppearanceOverlay="@style/SmoothBottomImage">

            <RelativeLayout
                android:id="@+id/rl_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/top_headline_image"
                    android:layout_width="match_parent"
                    android:layout_height="312dp"
                    android:foreground="@drawable/text_overlay"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/SmoothBottomImage" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/top_headline_image_loading"
                    android:layout_width="match_parent"
                    android:layout_height="312dp"
                    style="@style/LoadingPlaceholder"/>

                <TextView
                    android:id="@+id/tv_top_headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/top_headline_learn_more"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/top_headline_learn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/top_headline_image"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/action_learn_more"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/top_headline_learn_more_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/top_headline_learn_more"
                    android:layout_alignBottom="@id/top_headline_image"
                    android:layout_toEndOf="@id/top_headline_learn_more"
                    android:text="@string/action_learn_more_arrow"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Breaking News -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_breaking_news" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_breaking_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_breaking_news" />

        <!-- ForYou News -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp">

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_for_you_news" />

            <TextView
                android:id="@+id/more_for_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="More" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_for_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="4"
            tools:listitem="@layout/item_discover_news" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
